# VULCAN

./: .gitignore  CMakeLists.txt  README.md  server.py  vulcan_bindings.cpp
benchmarks/: CMakeLists.txt  bench_inference.cpp  bench_memory.cpp
benchmarks/scripts/: plot_results.py
cuda/: activation.cu  attention.cu  elementwise.cu  fused_kernels.cu  layernorm.cu  matmul.cu  matmul_wmma.cu  memory.cu  quantization.cu  rope.cu  softmax.cu  vector_add.cu
docs/ADRs/: 001-cuda-memory-management.md  002-kernel-fusion-strategy.md  003-quantization-format.md
docs/profiling/: README.md
include/cuda/: kernels.h  memory.h  utils.h
include/vulcan/: engine.h  kv_cache.h  model.h  sampler.h  tensor.h  transformer.h
src/: engine.cpp  kv_cache.cpp  model.cpp  pybind_vulcan.cpp  sampler.cpp  tensor.cpp  transformer.cpp
tests/: CMakeLists.txt  generate_golden_refs.py  test_attention.cu  test_kernels.cu  test_memory.cpp  test_quantization.cu  test_tensor.cpp  test_vector_add.cu
tools/: convert_model.py  inspect_weights.cpp  quantize_weights.py
